results/SVCOMP/specgen/log-URLDecoder01-2024_03_07_17_17_40.txt
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:2: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

// File name: Main.java

// JML specifications for the Main class
public class Main {

    //@ requires arg != null;
    //@ ensures \result ==> (\exists String s2; s2 == java.net.URLDecoder.decode("some-url+" + arg, "UTF-8") && s2.startsWith("some"));
    //@ ensures !\result ==> (\forall String s2; !s2.startsWith("some"));
    public static boolean f(String arg) {

        String s1 = "some-url+" + arg;

        try {
            String s2 = java.net.URLDecoder.decode(s1, "UTF-8");
            if (!s2.startsWith("some")) {
                return false;
            }
        } catch (java.io.UnsupportedEncodingException e) {
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/URLDecoder01.java:4: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

